# qml6termwidget

./: CMakeLists.txt
debian/: control
lib/: TerminalDisplay.cpp
